# test-airflow

./: .gitignore  .gitmodules  README.md  addAdmin.sh  airflow.cfg  docker-compose.yaml  pyproject.toml  setup.sh
dags/: data_demo_dag.py  data_process.py  printer.py  tutorial.py
dags/credit/: feature_dag.py
dags/credit/src/: model.py  processing.py  transform.py
dags/mlflow_ex/: data_demo_dag.py  model.py
docker/airflow/: Dockerfile
docker/jupyterhub/: Dockerfile
docker/mlflow/: Dockerfile
docker/notebook/: Dockerfile
ipython/extensions/: idoml_extension.py  idoml_magic.py
ipython/profile_default/: ipython_config.py
notebook/: Untitled.ipynb  rf_model.ipynb
plugins/: external_tool_menu.py  menu_example.py
